2000-02-24  Mito  <mit@nines.nec.co.jp>

	* mime-edit.el (mime-edit-normalize-body): Fix number of arguments
	against enriched-encode.

2000-02-27  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-view.el: Don't show a child entity of
	message/external-body.

2000-02-21   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>

	* pgg.el (pgg-temp-buffer-show-function): Use
	`shrink-window-if-larger-than-buffer'.

	* pgg-gpg.el (pgg-gpg-process-region): Fix cleanup form.

	* pgg-pgp.el (pgg-pgp-process-region): Ditto.

	* pgg-pgp5.el (pgg-pgp5-process-region): Ditto.

	* semi-setup.el (mime-setup-enable-inline-image): Remove checking
	of bitmap-mule; use `eval-after-load' instead of
	`call-after-loaded' to require `mime-image'.

	* mime-image.el (mime-display-image): Set default umask to 077.
	(mime-image-create): Use `nothing-image-instance-p'.

	* mime-pgp.el: When it is compiled, define `smime-output-buffer'
	and `smime-errors-buffer' to avoid compiler warning.

	* mime-edit.el: Ditto.

	* mime-pgp.el
	(mime-view-application/pkcs7-mime): Regard smime-type as
	"enveloped-data" unless it is specified.

	* smime.el (smime-directory-files): Abolish.
	(smime-verify-region): Abolish local variable `args'.

2000-02-20   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>

	* mime-image.el: Remove X-Face setting; require cl when compiling.
	(mime-image-format-alist): Remove image/x-mag and image/x-pic.
	(mime-image-type-available-p): New function.
	(mime-image-create): New function.
	(mime-image-insert): New function.
	(mime-display-image): Rewrite.

	* mime-edit.el
	(mime-edit-define-charset): Handle 'mime-charset-comment.

2000-02-02  Nakagawa, Makoto  <Makoto.Nakagawa@jp.compaq.com>

	* pgg-pgp5.el (pgg-scheme-verify-region): Copy the contents of
	`pgg-errors-buffer' to `pgg-output-buffer'.

2000-02-21  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* EMY 1.13.4 is released.

2000-02-20  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* semi-def.el (mime-insert-button): Insert newline to avoid